--- a/src/TableEditWidget/TableEditWidget.ui
+++ b/src/TableEditWidget/TableEditWidget.ui
@@ -31,68 +31,6 @@ background: #f3f3f3;
    <property name="bottomMargin">
     <number>0</number>
    </property>
-   <item row="0" column="0">
-    <widget class="QWidget" name="widget_2" native="true">
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>40</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>16777215</width>
-       <height>40</height>
-      </size>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background:#f3f3f3;</string>
-     </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,20">
-      <item>
-       <widget class="QLabel" name="label_9">
-        <property name="minimumSize">
-         <size>
-          <width>30</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">image: url(&quot;:/res/setting.png&quot;);</string>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="label_2">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Ignored">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>12</pointsize>
-         </font>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">color:#000000;
-</string>
-        </property>
-        <property name="text">
-         <string>设置</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
    <item row="1" column="0">
     <widget class="FluentTabWidget" name="tabWidget">
      <property name="styleSheet">
@@ -698,11 +636,11 @@ background:#1191d3;
         <widget class="QLabel" name="label_12">
          <property name="font">
           <font>
-           <pointsize>20</pointsize>
+           <pointsize>28</pointsize>
           </font>
          </property>
          <property name="text">
-          <string>这里的区域，以后再来探索吧！</string>
+          <string>...</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -812,7 +750,7 @@ background:#1191d3;
       <attribute name="title">
        <string>关于</string>
       </attribute>
-      <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,11,3,10">
+      <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,11,3,0,10">
        <item>
         <spacer name="verticalSpacer_2">
          <property name="orientation">
@@ -1022,6 +960,16 @@ background:rgb(11, 96, 139);
         </layout>
        </item>
        <item>
+        <widget class="QLabel" name="label_13">
+         <property name="text">
+          <string>本应用由雨云提供计算服务</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignmentFlag::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Orientation::Vertical</enum>
@@ -1036,6 +984,68 @@ background:rgb(11, 96, 139);
        </item>
       </layout>
      </widget>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QWidget" name="widget_2" native="true">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>40</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>40</height>
+      </size>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background:#f3f3f3;</string>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,20">
+      <item>
+       <widget class="QLabel" name="label_9">
+        <property name="minimumSize">
+         <size>
+          <width>30</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">image: url(&quot;:/res/setting.png&quot;);</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_2">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Ignored">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">color:#000000;
+</string>
+        </property>
+        <property name="text">
+         <string>设置</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
   </layout>
