--- a/src/MainTableWidget/MainTableWidget.ui
+++ b/src/MainTableWidget/MainTableWidget.ui
@@ -136,7 +136,7 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true"/>
+        <string notr="true">color:black;</string>
        </property>
        <property name="text">
         <string>--:--:--</string>
